--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body
 {
     display: flex;
     justify-content: center;
-    padding: 100px;
 }
 .out
 {   
     width: 400px;
     height: 550px;
     padding: 10px;
+    margin-top:50px;
     background-color: rgb(34, 32, 32);
     border-radius: 15px;
     box-shadow: 0 0 5px black;
